@@ -20,6 +20,7 @@ public:
 
 	void							Set(const CStdString& strSelectedItem, const CStdString& strDirectory);
 	const CStdString& Get(const CStdString& strDirectory) const;
+  void              Remove(const CStdString& strDirectory);
 private:
 	vector<CHistoryItem> m_vecHistory;
 	CStdString					 m_strNull;
