@@ -595,7 +595,7 @@ void CGUIWindowVideoPlaylist::Update(const CStdString &strDirectory)
 	if (iItem >=0 && iItem < (int)m_vecItems.size())
 	{
 		CFileItem* pItem=m_vecItems[iItem];
-		if (pItem->m_bIsFolder && pItem->GetLabel() != "..")
+		if (pItem->GetLabel() != "..")
 		{
 			GetDirectoryHistoryString(pItem, strSelectedItem);
 		}
