@@ -281,7 +281,7 @@ void CGUIWindowVideoTitle::Update(const CStdString &strDirectory)
 	if (iItem >=0 && iItem < (int)m_vecItems.size())
 	{
 		CFileItem* pItem=m_vecItems[iItem];
-		if (pItem->m_bIsFolder && pItem->GetLabel() != "..")
+		if (pItem->GetLabel() != "..")
 		{
 			strSelectedItem=pItem->m_strPath;
 			m_history.Set(strSelectedItem,m_Directory.m_strPath);
