@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 10-03-2005 added: Option to only remember selected item when traversing up the folder structure(parent folder), not down.
+  - 10-03-2005 changed: Unified the way xbmc remember what item was selected in a folder.
   - 10-03-2005 added: Direct url support for built-in command XBMC.PlayMedia(url)
   - 10-03-2005 fixed: Selecting VIDEO_TS.IFO on a dvd would not initiate playback properly.
   - 10-03-2005 fixed: Any dll's atempting to use stat on a dvd would always return success with invalid properties set
